--- a/run_me.ipynb
+++ b/run_me.ipynb
@@ -12,9 +12,7 @@
      "text": [
       "Dataset URL: https://www.kaggle.com/datasets/lovishbansal123/sales-of-a-supermarket\n",
       "License(s): apache-2.0\n",
-      "Downloading sales-of-a-supermarket.zip to /home/resurrexi/projects/kaggle_supermarket\n",
-      "  0%|                                               | 0.00/35.9k [00:00<?, ?B/s]\n",
-      "100%|███████████████████████████████████████| 35.9k/35.9k [00:00<00:00, 188MB/s]\n"
+      "sales-of-a-supermarket.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
      ]
     }
    ],
@@ -826,7 +824,7 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>date</th>\n",
-       "      <th>rolling_7day_rating</th>\n",
+       "      <th>rolling_7day_rating_avg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -840,25 +838,25 @@
        "      <th>1</th>\n",
        "      <td>Mandalay-B</td>\n",
        "      <td>2019-01-02</td>\n",
-       "      <td>6.766667</td>\n",
+       "      <td>6.685714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Mandalay-B</td>\n",
        "      <td>2019-01-03</td>\n",
-       "      <td>7.355556</td>\n",
+       "      <td>7.240000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Mandalay-B</td>\n",
        "      <td>2019-01-04</td>\n",
-       "      <td>6.733333</td>\n",
+       "      <td>6.692308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Mandalay-B</td>\n",
        "      <td>2019-01-05</td>\n",
-       "      <td>6.973333</td>\n",
+       "      <td>6.925000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -870,31 +868,31 @@
        "      <th>258</th>\n",
        "      <td>Yangon-A</td>\n",
        "      <td>2019-03-26</td>\n",
-       "      <td>7.351190</td>\n",
+       "      <td>7.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>259</th>\n",
        "      <td>Yangon-A</td>\n",
        "      <td>2019-03-27</td>\n",
-       "      <td>7.243571</td>\n",
+       "      <td>7.185294</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>260</th>\n",
        "      <td>Yangon-A</td>\n",
        "      <td>2019-03-28</td>\n",
-       "      <td>7.275714</td>\n",
+       "      <td>7.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>261</th>\n",
        "      <td>Yangon-A</td>\n",
        "      <td>2019-03-29</td>\n",
-       "      <td>7.197143</td>\n",
+       "      <td>7.116129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262</th>\n",
        "      <td>Yangon-A</td>\n",
        "      <td>2019-03-30</td>\n",
-       "      <td>7.222143</td>\n",
+       "      <td>7.106897</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -902,18 +900,18 @@
        "</div>"
       ],
       "text/plain": [
-       "           name        date  rolling_7day_rating\n",
-       "0    Mandalay-B  2019-01-01             7.333333\n",
-       "1    Mandalay-B  2019-01-02             6.766667\n",
-       "2    Mandalay-B  2019-01-03             7.355556\n",
-       "3    Mandalay-B  2019-01-04             6.733333\n",
-       "4    Mandalay-B  2019-01-05             6.973333\n",
-       "..          ...         ...                  ...\n",
-       "258    Yangon-A  2019-03-26             7.351190\n",
-       "259    Yangon-A  2019-03-27             7.243571\n",
-       "260    Yangon-A  2019-03-28             7.275714\n",
-       "261    Yangon-A  2019-03-29             7.197143\n",
-       "262    Yangon-A  2019-03-30             7.222143\n",
+       "           name        date  rolling_7day_rating_avg\n",
+       "0    Mandalay-B  2019-01-01                 7.333333\n",
+       "1    Mandalay-B  2019-01-02                 6.685714\n",
+       "2    Mandalay-B  2019-01-03                 7.240000\n",
+       "3    Mandalay-B  2019-01-04                 6.692308\n",
+       "4    Mandalay-B  2019-01-05                 6.925000\n",
+       "..          ...         ...                      ...\n",
+       "258    Yangon-A  2019-03-26                 7.300000\n",
+       "259    Yangon-A  2019-03-27                 7.185294\n",
+       "260    Yangon-A  2019-03-28                 7.200000\n",
+       "261    Yangon-A  2019-03-29                 7.116129\n",
+       "262    Yangon-A  2019-03-30                 7.106897\n",
        "\n",
        "[263 rows x 3 columns]"
       ]
@@ -929,22 +927,34 @@
     "WITH cte AS (\n",
     "    SELECT c.name\n",
     "        ,b.date\n",
-    "        ,AVG(a.rating) AS daily_rating\n",
+    "        ,SUM(a.rating) AS rating_total\n",
+    "        ,COUNT(a.invoice_id) AS txn_count\n",
     "    FROM dim_date AS b\n",
     "    LEFT JOIN fact_sales AS a\n",
     "    ON a.date_id = b.id\n",
     "    INNER JOIN dim_location AS c\n",
     "    ON a.location_id = c.id\n",
     "    GROUP BY 1, 2\n",
+    "),\n",
+    "rolling_sum AS (\n",
+    "    SELECT name\n",
+    "        ,date\n",
+    "        ,SUM(rating_total) OVER (\n",
+    "            PARTITION BY name\n",
+    "            ORDER BY date\n",
+    "            ROWS BETWEEN 6 PRECEDING AND CURRENT ROW\n",
+    "        ) AS rolling_rating_total\n",
+    "        ,SUM(txn_count) OVER (\n",
+    "            PARTITION BY name\n",
+    "            ORDER BY date\n",
+    "            ROWS BETWEEN 6 PRECEDING AND CURRENT ROW\n",
+    "        ) AS rolling_txn_count\n",
+    "    FROM cte\n",
     ")\n",
     "SELECT name\n",
     "    ,date\n",
-    "    ,AVG(daily_rating) OVER (\n",
-    "        PARTITION BY name\n",
-    "        ORDER BY date\n",
-    "        ROWS BETWEEN 6 PRECEDING AND CURRENT ROW\n",
-    "    ) AS rolling_7day_rating\n",
-    "FROM cte\n",
+    "    ,rolling_rating_total / rolling_txn_count AS rolling_7day_rating_avg\n",
+    "FROM rolling_sum\n",
     "\"\"\"\n",
     "\n",
     "df = pd.read_sql(query, conn)\n",
@@ -964,6 +974,7 @@
     "* Data lake (GCS + Bigquery)\n",
     "* Dashboard and reporting (Looker)\n",
     "* Security and access (IAM)\n",
+    "* Secret manager\n",
     "\n",
     "### Composer\n",
     "\n",
@@ -975,7 +986,7 @@
     "\n",
     "### BigQuery\n",
     "\n",
-    "The data warehouse for persisting silver/gold layer assets. In this example, the dim and fact tables would be considered the silver-layer assets and be created in BQ. The queries that were used to answer the questions would be materialized as views, and be considered gold-layer assets. These views would then be exposed for the dashboard/reporting service. Since the task originally asked for SQLite as the DB, the queries will have to be converted to BQ dialect when transitioning to BQ. BQ also has loose enforcement around constraints, so adding additional data validation checks would help.\n",
+    "The data warehouse for persisting silver/gold layer assets. In this example, the dim and fact tables would be considered the silver-layer assets and be created in BQ. The queries that were used to answer the questions would be materialized as views, and be considered gold-layer assets. These views would then be exposed for the dashboard/reporting service. Since the task originally asked for SQLite as the DB, the queries will have to be converted to BQ dialect when transitioning to BQ. BQ also has loose enforcement around constraints, so adding additional data validation checks would help. In addition to BQ, use of dbt with the BQ adapter works as a good option for teams less savvy in Python.\n",
     "\n",
     "### Looker\n",
     "\n",
@@ -984,6 +995,10 @@
     "### IAM\n",
     "\n",
     "IAM would manage permissions and access to the cloud services. Service accounts would have to be created to allow for read/write to GCS/BQ.\n",
+    "\n",
+    "### Secrets manager\n",
+    "\n",
+    "Used for storing API keys, credentials, etc.\n",
     "\n",
     "All cloud resources can be created and managed via IaC, e.g. Terraform."
    ]
@@ -1006,7 +1021,8 @@
     "\n",
     "* In most real world scenarios today, the dim and fact tables are usually residing in a transaction DB, serving an application. The role of BQ would then be used for OLAP, where the data would usually be denormalized for faster querying. There is no right solution; it depends on business use-case and available tech stack.\n",
     "* Alternative to batch ingest would be streaming ingest using PubSub, or using Datastream for CDC which can directly stream changes to BQ from the source DB.\n",
-    "* Sometimes the schema of tables can change due to new requirements. Table migrations can be run using a DAG for running versioned SQL scripts, or utilizing migration tools like SQLAlchemy + Alembic."
+    "* Sometimes the schema of tables can change due to new requirements. Table migrations can be run using a custom job for running versioned SQL scripts, or utilizing migration tools like SQLAlchemy + Alembic.\n",
+    "* Some raw transactional data can grow, causing storage costs to grow. Utilizing lifecycle rules on buckets can help manage costs."
    ]
   },
   {
