--- a/run_me.ipynb
+++ b/run_me.ipynb
@@ -435,7 +435,7 @@
     "location_id | TEXT | FK\n",
     "date_id | INTEGER | FK\n",
     "gross_income | REAL |\n",
-    "rating | REAL\n",
+    "rating | REAL |\n",
     "\n",
     "The other quantitative measures of the transaction can be included, such as `Quantity`, `Tax 5%`, `Total`, etc. but for the sake of brevity I'm only including `gross income` and `Rating` to answer the sample questions above.\n",
     "\n",
