--- a/run_me.ipynb
+++ b/run_me.ipynb
@@ -1019,7 +1019,7 @@
    "source": [
     "## Closing thoughts\n",
     "\n",
-    "* In most real world scenarios today, the dim and fact tables are usually residing in a transaction DB, serving an application. The role of BQ would then be used for OLAP, where the data would usually be denormalized for faster querying. There is no right solution; it depends on business use-case and available tech stack.\n",
+    "* In modern DWH like BQ, there's less of an emphasis on dimension and fact tables due to it being columnar-oriented storage, and Google does recommend denormalized tables with nested data. That being said, there is no right solution; it depends on business use-case and available tech stack.\n",
     "* Alternative to batch ingest would be streaming ingest using PubSub, or using Datastream for CDC which can directly stream changes to BQ from the source DB.\n",
     "* Sometimes the schema of tables can change due to new requirements. Table migrations can be run using a custom job for running versioned SQL scripts, or utilizing migration tools like SQLAlchemy + Alembic.\n",
     "* Some raw transactional data can grow, causing storage costs to grow. Utilizing lifecycle rules on buckets can help manage costs."
